<?xml version="1.0"?>
<package format="3">
  <name>hri_face_body_matcher</name>
  <version>0.1.4</version>
  <description>The hri_face_body_matcher package</description>
  <maintainer email="luka.juricic@pal-robotics.com">Luka Juricic</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <depend>hri</depend>
  <depend>hri_msgs</depend>
  <depend>libdlib-dev</depend>
  <!-- packages required by dlib -->
  <depend>libblas-dev</depend>
  <depend>liblapack-dev</depend>
  <depend>libsqlite3-dev</depend>
  <!-- end of packages required by dlib -->
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
