<?xml version="1.0"?>
<package format="3">
  <name>hri_face_body_matcher</name>
  <version>0.1.5</version>
  <description>The hri_face_body_matcher package</description>
  <maintainer email="luka.juricic@pal-robotics.com">Luka Juricic</maintainer>
  <license>PAL Robotics S.L.</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>hri_msgs</build_depend>
  <build_depend>libblas-dev</build_depend>
  <build_depend>libdlib-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libsqlite3-dev</build_depend>
  <build_depend>lifecycle_msgs</build_depend>

  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>libblas-dev</exec_depend>
  <exec_depend>libdlib-dev</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>libsqlite3-dev</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <depend>hri</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
